(stage-6) Security & Compliance/terraform/onfinance-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onfinance-ingress
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:123456789012:certificate/abcdef123456"
spec:
  rules:
    - host: onfinance.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
